remove time cutoff for bugs/events

--- a/index.less
+++ b/index.less
@@ -239,18 +239,6 @@ section {
    }
 }
 
-#assigned {
-   margin-bottom: 11px;
-
-   .assigned-item {
-      margin-bottom: 1em;
-   }
-   
-   .assigned-link {
-      color: black;
-   }
-}
-
 #timeline {
    width: 550px;
    float: left;
